--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 </head>
 
 <body>
+
+<div id="index">
+	<h2>个人简介</h2>
+	<div class="panel panel-success">
+			<!-- 标准的按钮 -->
+		<button type="button eight" class="btn btn-default  eight ee ">姓 名</button>
+		<button type="button" class="btn btn-primary ee " style="margin-right:100px;">刘琦康</button>
+		<button type="button eight" class="btn eight btn-warning ee">性 别</button>
+		<button type="button" class="btn btn-danger ee">男</button>
+		<br>
+		<button type="button eight" class="btn btn-success eight ee">籍 贯</button>
+		<button type="button" class="btn btn-info  ee"  style="margin-right:100px;">山西运城</button>
+		<button type="button eight" class="btn eight btn-default ee">年 龄</button>
+		<button type="button" class="btn btn-success ee">23</button>
+		<br>
+		<a href="https://liuqikang67kk.github.io/pers/"><button type="button" class="btn btn-success ee">个人简历</button></a>
+		<a href="https://liuqikang67kk.github.io/school/"><button type="button" class="btn btn-danger ee">医药管理学院</button></a>
+		<a href="https://liuqikang67kk.github.io/hh/"><button type="button" class="btn btn-success ee">vr官网</button></a>
+		<br>
+		<!-- 并不强调是一个按钮，看起来像一个链接，但同时保持按钮的行为 -->
+		<button type="button eight" class="btn btn-link  ee eight ">求职 意向</button>
+		<button type="button" class="btn btn-info ee ">WEB前端</button>
+   </div>
+
+
+
+
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
 	<div class="container">
 		<div class="navbar-header" style="line-height:3;font-size:17px;">
@@ -23,7 +50,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class='nav navbar-nav navbar-right'>
-				<li class="active"><a href='#myCarousel'><span class="glyphicon glyphicon-home"></span> 首页</a></li>
+				<li class="active"><a href='#index'><span class="glyphicon glyphicon-home"></span> 首页</a></li>
 				<li class=""><a href="#job"><span class="glyphicon glyphicon-th-large"></span> 简介</a></li>
 				<li class=""><a href="#practice"><span class="glyphicon glyphicon-pencil"></span> 练习</a></li>
 				<li class=""><a href="#contact"><span class="glyphicon glyphicon-envelope"></span> 联系</a></li>
@@ -41,7 +68,7 @@
 		         <th>公司</th>
 		         <th>职位</th>
 		         <th>项目</th>
-		         <th>详情</th>
+<!-- 		         <th>详情</th> -->
 		      </tr>
 		   </thead>
 		   <tbody>
@@ -54,8 +81,8 @@
 			   <a data-original-title="百迈客" href="http://www.biocloud.net" target="_blank" class="btn-link" data-toggle="popover" data-container="body" title="" data-content="百迈客云平台" data-trigger="hover" data-placement="top">百迈客</a>
 
    				</td>
-		         <td><button class="showMore btn btn-info">展开</button></td>
-		        <tr class="inline-tr">
+		         <!-- <td><button class="showMore btn btn-info">展开</button></td> -->
+<!-- 		        <tr class="inline-tr">
 		      		<td class='inline-td' colspan="5">
 		      			<div class="alert alert-warning show">
 		      				负责页面制作，用jquery写一些效果 <br/>
@@ -63,7 +90,7 @@
 		      				负责页面制作，用jquery写一些效果 <br/>		
 		      			</div>
 		      		</td>
-		      </tr>
+		      </tr> -->
 		      </tr>
 
 		   </tbody>
@@ -193,7 +220,7 @@
 
 
 <h2>联系方式</h2>
-<div class="contact well">
+<div class="contact well" id="contact">
 
 	<div>
 		<kbd>邮件</kbd>
